rustforge-contract-macros/tests/ui/fail_unknown_rule.stderr
error: unsupported #[rf(...)] syntax
 --> tests/ui/fail_unknown_rule.rs:5:10
  |
5 |     #[rf(not_a_real_rule)]
  |          ^^^^^^^^^^^^^^^
